clang-tidy: Fix unnecessary object copy in CPUMonitor::setCPULimit() <https://webkit.org/b/192707> <rdar://problem/46734926>

Reviewed by Daniel Bates.

Source/WebCore:

* platform/CPUMonitor.cpp:
(WebCore::CPUMonitor::setCPULimit):
* platform/CPUMonitor.h:
(WebCore::CPUMonitor::setCPULimit):
- Change parameter to const reference to fix unnecessary copies.

Source/WebKit:

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::updateCPUMonitorState):
- Pass m_cpuLimit directly since getting its value causes an
  identical std::optional<double> to be created unnecessarily.


Canonical link: https://commits.webkit.org/207362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239315 268f45cc-cd09-0410-ab3c-d52691b4dbfc